# Dev-Exp-Share

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.rst  fix_code_style.py  release-history.rst  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py  tox.ini
Docker/: README.rst  advance.rst
Font/: README.rst
IDLE/Eclipse/: 01-PyDev.rst
IDLE/PyCharm/: 01-Keymap.rst  01-Shortcut-Key.rst  02-Settings.rst  03-Pluggin.rst  04-Execute.rst
IDLE/Sublime Text/: 04-Sublime-Hands-on-Skill.rst  README.rst  test.py
Language/Python/: README.rst  pip-install.sh  req_cache.txt  req_chinese.txt  req_crawler.txt  req_cryptography.txt  req_data_io.txt  req_data_science.txt  req_data_science_nature_language.txt  req_data_service.txt  req_data_structure.txt  req_data_validation.txt  req_database.txt  req_datetime.txt  req_doc.txt  req_geography.txt  req_gimmic.txt  req_meta_programming.txt  req_profiler.txt  req_restful.txt  req_sanhe.txt  req_test.txt  req_text_service.txt  req_webdev.txt  requirements.txt
OS/Linux/: Linux-Command.rst  README.rst
OS/Linux/zip/: README.rst
OS/MacOS/: Keyboard-Shortcut.rst  README.rst  Touch-Pad.rst
OS/MacOS/Bash/: README.rst  get-current-script-file-path.sh
OS/MacOS/Makefile/: README.rst  all.sh  install.sh  makefile
OS/MacOS/Productivity Software/: Homebrew.rst  Iterm2.rst  Python-in-MacOS.rst
OS/Windows10/: Bash-in-Windows.rst  Makefile-in-Windows.rst  README.rst
Redshift/: Load-Data-From-S3.rst  Manage-Redshift-User.rst  Manipulate-Redshift-with-Sqlalchemy.rst
Text Editor/: README.rst
Text Editor/Atom/: Edit-Shortcut.rst  README.rst
Text Editor/Atom/Customize-Package/: README.rst
Text Editor/Atom/Run-Script/: test.py
Text Editor/MarkdownPad/: README.rst
Text Editor/Sublime Text/: 01-Global-Setting-Guide.rst  02-Config-Python-Interpreter.rst  03-Package-Control-Guide.rst  04-Sublime-Hands-on-Skill.rst  04-Sublime-Shortcuts-and-Keymap.rst  05-Sync-SublimeText-Setting.rst  README.rst  config_python_interpreter_example.py
Text Editor/Sublime Text/Snippet/: README.rst
Text Editor/VIM/: 01-Vim-Command-Cheatsheet.rst  REAME.rst
Tor Network/: test.py
WebBrowser/: Chrome.rst
config/: 00-config-shared.json  switch-env
dev_exp_share/: __init__.py  env_json.py  load_env_json.py
dev_exp_share/aws/: config.py
dev_exp_share/aws/dynamodb/: __init__.py
dev_exp_share/aws/kinesis/: firehose_output_to_s3.py
docs/: Makefile  log.txt  make.bat
docs/source/: AWS-Cloud-Solution-Proposal-CheatSheet.rst  README.rst  conf.py
docs/source/01-AWS/: AWS-CLI-Tutorial.rst  Cost-and-Value-of-using-AWS.rst  README.rst  Similar-Application-Comparison.rst  The-Ultimate-Cheatsheet.rst  genereate_folder.py  index.rst
docs/source/02-Linux-Development-Tool/: README.rst
docs/source/02-SDE/01-Program-Language/02-Python-Root/Awesome-Python-Library-for-Software-Development/poetry/lambda-project-lock/: pyproject.toml
docs/source/02-SDE/01-Program-Language/02-Python-Root/Awesome-Python-Library-for-Software-Development/poetry/poetry_demo-project/: README.rst  pyproject.toml  test.py
docs/source/02-SDE/01-Program-Language/02-Python-Root/Awesome-Python-Library-for-Software-Development/poetry/project1/: pyproject.toml
docs/source/02-SDE/01-Program-Language/02-Python-Root/Awesome-Python-Library-for-Software-Development/poetry/project1/tests/: test_project1.py
tests/: test_import.py
(+2060 files in other folders)
