[tool.poetry]
name = "aws_lbd_ci_example"
version = "0.0.1"
description = "AWS Lambda Project CI/CD Best Practice Example"
authors = ["Sanhe Hu <husanhe@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"
atomicwrites = "1.4.0"
attrs = "21.4.0"
attrs_mate = "1.0.2"
autopep8 = "1.6.0"
blessed = "1.19.1"
boto3 = "1.20.48"
boto_session_manager = "0.0.4"
botocore = "1.23.48"
cached-property = "1.5.2"
certifi = "2021.10.8"
cffi = "1.15.0"
chalice = "1.26.5"
charset-normalizer = "2.0.11"
click = "8.0.3"
cryptography = "36.0.2"
idna = "3.3"
inquirer = "2.9.1"
isodate = "0.6.1"
jmespath = "0.10.0"
loguru = "0.6.0"
lxml = "4.7.1"
mypy-extensions = "0.4.3"
pathlib_mate = "1.0.3"
platformdirs = "2.4.1"
pycodestyle = "2.8.0"
pycparser = "2.21"
pynamodb = "5.1.0"
pysecret = "1.0.2"
python-dateutil = "2.8.2"
python-editor = "1.0.4"
pytz = "2021.3"
PyYAML = "6.0"
readchar = "3.0.5"
requests-file = "1.5.1"
requests-toolbelt = "0.9.1"
requests = "2.27.1"
s3pathlib = "1.0.10"
s3transfer = "0.5.1"
six = "1.16.0"
smart-open = "5.2.1"
tablib = "3.2.1"
toml = "0.10.2"
urllib3 = "1.26.8"
wcwidth = "0.2.5"
zeep = "4.1.0"


[tool.poetry.dev-dependencies]
# Don't put anything here, explicit is better than implicit


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
twine = "3.8.0"
wheel = "0.38.1"


[tool.poetry.group.doc]
optional = true


[tool.poetry.group.doc.dependencies]
Sphinx = "4.3.0"
sphinx-jinja = "1.1.1"
rstobj = "0.0.7"
docfly = "1.0.2"
furo = "2021.8.31"
sphinx-inline-tabs = "2021.8.17b10"


[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest = "6.2.5"
pytest-cov = "2.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
