[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sanhe Hu <husanhe@gmail.com>"]
readme = "README.rst"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
func-args = "^0.1.1"
iterproxy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
